prevent version link from being clicked during play on mobile

--- a/public/src/css/main.css
+++ b/public/src/css/main.css
@@ -241,3 +241,7 @@ kbd{
 	text-decoration: none;
 	cursor: default;
 }
+
+.version-hide{
+    pointer-events: none;
+}
